fix possible NPE in Jwt2AuthoritiesConverter